<resources>
    <string name="app_name">GTA_GEO_TorpedoAssault</string>

    <!-- MainActivity -->
    <string name="mainactivity">MainActivity</string>
    <string name="btnPlay">Play</string>
    <string name="btnLocate">Locate</string>
    <string name="btnScores">Scores</string>
    <string name="btnInfo">Info</string>
    <string name="btnConfig">Config</string>
    <string name="jouer">Jouer</string>
    <string name="localiser">Localiser</string>
    <string name="scores">Scores</string>
    <string name="informations">Informations</string>
    <string name="configuration">Configuration</string>

    <!-- Locate -->
    <string name="mylocation_button_clicked">MyLocation button clicked</string>
    <string name="current_location">Current location:\n</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="permission_required_toast">Permission required</string>
    <string name="permission_rationale_location">permission_rationale_location</string>

    <!-- Play -->
    <string name="mode_chasse">Mode Chasse</string>
    <string name="mode_gestion">Mode Gestion</string>

    <!-- Play_Hunter -->
    <string name="poste_de_tir">Poste de tir</string>
    <string name="passerelle_d_observation">Passerelle d\'observation</string>
    <string name="gestion">Gestion</string>
    <string name="chasse">Chasse</string>
    <string name="chambre">Chambre des Torpilles</string>
    <string name="pilotage">Poste de Pilotage</string>

    <!-- Debug -->
    <string name="mainActivity_debug">DEBUG ACTIVITY MAIN</string>
    <string name="playActivity_debug">DEBUG ACTIVITY PLAY</string>
    <string name="hunterActivity_debug">DEBUG ACTIVITY HUNTER</string>
    <string name="managerActivity_debug">DEBUG ACTIVITY MANAGER</string>
    <string name="torpedo_count">Nombre de torpilles :</string>
    <string name="torpedo_type">Type de torpilles</string>
    <string name="fire">Feu!</string>
    <string name="fire_button">Feu!</string>
    <string name="fire_button_landscape">Observer</string>
    <string name="fleche_description">Une flêche qui indique où se trouve le haut de l\'appareil.</string>

</resources>